@@ -1,3 +1,4 @@
 v5.0
 - new Callisto workflow Baserom
-- initialization scripts are now in Powershell
+- revamped uberasm objects system
+- initialization script is now in Powershell
